# gpt-cli

./: .gitignore  README.md  dalle.py  funcs.sh  gpt.py  ideas.md  pyproject.toml  requirements.txt  web.py
ask/: __main__.py  app.py
ask/vendors/: __init__.py
ask/vendors/anthropic/: prompt.py
ask/vendors/openai/: prompt.py
gpt/: __main__.py  app.py  settings.py  web.py
gpt/vendors/anthropic/: __init__.py  models.py  prompt.py
gpt/vendors/openai/: __init__.py  image.py  models.py  prompt.py
src/: cli.py  schema.py  settings.py  tasks.py  web.py
src/cli/: __init__.py  chat.py  cli.py  config.py  default.py  img.py  web.py
src/cli/chat/: __init__.py  chat.py  state.py
src/cli/chat/actions/: __init__.py  base.py  chat.py  clear.py  compress.py  read_file.py  read_web.py  shell.py  ssh.py  tasks.py
src/cli/chat/actions/tasks/: __init__.py  action.py  extract.py  task_definition.py
src/vendors/anthropic/: __init__.py  models.py  prompt.py
src/vendors/openai/: __init__.py  prompt.py
